# chorus_studio

./: Cargo.toml  README.md  build.rs
proto/: Cargo.toml
proto/src/: lib.rs
server/: .gitignore  Cargo.toml  chorus_studio.db
server/src/: main.rs
server/src/db/: mod.rs
src/: asset_storage.rs  event.rs  input.rs  main.rs  render.rs
src/gui/: main_window.rs  mod.rs  renderer.rs  view.rs  window.rs
src/gui/div/: div_iter.rs  mod.rs
src/gui/renderer/: mod.rs  text.rs
src/gui/renderer/glsl/: rect_color.fs  rect_color.vs  rect_text.fs  rect_text.vs  rect_texture.fs  rect_texture.vs
src/gui/widget/: mod.rs
src/gui/widgets/: mod.rs
src/ui/: mod.rs  views.rs
