[package]
name = "chorus_studio"
version = "0.1.0"
authors = ["Daniel Hauser <daniel.hauser@liwest.at>"]

[dependencies]
gl = "0.10.0"
bincode = "1.0.1"
# unicode-normalization = "0.1.7"

[dependencies.nanovg]
git = "https://github.com/KevinKelley/nanovg-rs"
rev = "3b79b9b6ee2625522637cc93862c52d9a901937c"
features = ["gl3"]

[dependencies.sdl2]
version = "0.31.0"
features = ["bundled"]

[dependencies.proto]
path = "proto"
version = "0.1.0"