[package]
name = "chorus_studio"
version = "0.1.0"
authors = ["Daniel Hauser <daniel.hauser@liwest.at>"]

[dependencies]
gl = "0.10.0"
bincode = "1.0.1"

[dependencies.nanovg]
# git = "https://github.com/KevinKelley/nanovg-rs"
# rev = "e139f2dabe87a98de7e20dbd68738a0ea984246f"
path = "../nanovg-rs"
features = ["gl3"]

[dependencies.proto]
path = "proto"
version = "0.1.0"

[dependencies.glfw-ffi]
git = "https://github.com/Lisoph/glfw_ffi"